--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,13 +18,13 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/liquibase-springboot?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC#
 spring.datasource.username=lbuser
-spring.datasource.password=Bigbones13
+spring.datasource.password=Mypassword123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
 
 # -------------------------------------------------------------
 # Liquibase
 # -------------------------------------------------------------
-# liquibase changelog which is not described in the docs
+# liquibase changelog-master.xml which is not described in the docs
 # "classpath" defaults to /src/main/resources
-spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
+spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml/changelog-master.xml
