Fixed app properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,4 +27,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # -------------------------------------------------------------
 # liquibase changelog-master.xml which is not described in the docs
 # "classpath" defaults to /src/main/resources
-spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml/changelog-master.xml
+spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
